fixed menu z-index

--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -21,7 +21,7 @@ nav {
   background-color: brown;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   overflow-x: hidden;
   transition: 0.3s;
   padding-top: 60px;
